tdf#89852 on Windows do not decode the filename for email subject

... because MAPISendMail does not accept Unicode

Change-Id: Id48a41d1cf25d1a991b0f83fd5daa1a65896e958
(cherry picked from commit 77ff51623eab0c5908c84400c6eb8448ddb1e9c8)